added tls config

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -8,9 +8,18 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
     # add annotation
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-direct: 'true'
 spec:
+  tls:
+    - hosts:
+        - localhost
+        # - k8s-multi.com
+        # - www.k8s-multi.com
+      secretName: k8s-multi-com
   rules:
-    - http:
+    - host: localhost
+      http:
         paths:
           - path: /?(.*)
             pathType: Prefix
@@ -26,3 +35,20 @@ spec:
                 name: server-cluster-ip-service
                 port:
                   number: 5000
+    # - host: www.k8s-multi.com
+    #   http:
+    #     paths:
+    #       - path: /?(.*)
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: client-cluster-ip-service
+    #             port:
+    #               number: 3000
+    #       - path: /api/?(.*)
+    #         pathType: Prefix
+    #         backend:
+    #           service:
+    #             name: server-cluster-ip-service
+    #             port:
+    #               number: 5000
