--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -1,4 +1,4 @@
-apiVersion: certmanager.io/v1
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: k8s-multi-com-tls
@@ -8,7 +8,7 @@ spec:
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
-  commonName: k8s-multi.com
+  commonName: localhost
   dnsNames:
     - localhost
     # - k8s-multi.com
